Fix zoom being too fast when zoomed in

Before this commit, it wasn't possible to create a rectangle with
a good control over what's going on when you were very zoomed in
(enough to see pixels) on a big canvas (like 2000 x 2000, zoom > 4000).
The speed of canvas running off was too quick to make a controlled
action. This commit scales the speed of the movement by the zoom,
so the speed of the canvas is the same visually when zoomed in
or zoomed out.

BUG:514871

Commit made and tested by Agata Cacko <tamtamy.tymona@gmail.com>
but the code was written by Dmitry Kazakov.